appel pour affichage articles

--- a/public/css/adminstyle.css
+++ b/public/css/adminstyle.css
@@ -20,7 +20,7 @@ nav {
 
 
 @media only screen and (max-width : 992px) {
-    /* header, body, footer {
+    header, body, footer {
     padding-left: 0;
-    } */
+    }
 }
