Ajout mentions legales / Correction menu responsive

--- a/public/css/adminstyle.css
+++ b/public/css/adminstyle.css
@@ -18,12 +18,12 @@ nav {
     color:white;
 }
 
-.postform input::-moz-placeholder, .postform input:-ms-input-placeholder, .postform input::-webkit-input-placeholder  {
-    color:blue;
-  }
-
 @media only screen and (max-width : 992px) {
     header, body, footer {
     padding-left: 0;
+    }
+
+    .side-nav.fixed {
+        transform: translateX(-100%);
     }
 }
