--- a/public/css/adminstyle.css
+++ b/public/css/adminstyle.css
@@ -18,7 +18,17 @@ nav {
     color:white;
 }
 
+/* Flash */
+.container.flash .col.s12 {
+    background-color: #4caf50;
+    border: 4px solid #1b5e20;
+    margin-top: 15px;
+    padding-left: 10px;
+}
+
 @media only screen and (max-width : 992px) {
+
+    /* side-nav responsive*/
     header, body, footer {
     padding-left: 0;
     }
