--- a/public/css/adminstyle.css
+++ b/public/css/adminstyle.css
@@ -19,9 +19,10 @@ nav {
 }
 
 /* Flash */
-.container.flash .col.s12 {
+.flash {
     background-color: #4caf50;
     border: 4px solid #1b5e20;
+    margin : 0 30px;
     margin-top: 15px;
     padding-left: 10px;
 }
